--- a/app/views/stamps/index.html.haml
+++ b/app/views/stamps/index.html.haml
@@ -1,1 +1,5 @@
-This is index
+.center.hero-unit
+  %h1 Schengen Calculator
+
+  %input#dp1(type='text' data-behaviour='datepicker')
+  %input#dp2(type='text' data-behaviour='datepicker')
